# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  build_ci.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: data.json
task_manager/tasks/: consts.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_label_status_task_tasklabel_delete_labels_and_more.py  0003_alter_task_assigned_to_alter_task_creator_and_more.py  0004_alter_tasklabel_label.py  0005_alter_tasklabel_task.py  0006_remove_task_assigned_to_task_executor_and_more.py
task_manager/tasks/templates/tasks/: create_task.html  index_tasks.html
task_manager/templates/: auth_items.html  base copy.html  base.html  index.html  top_menu.html
task_manager/users/: forms.py  models.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py
