[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager. Hexlet project 4"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
]
